# CardCrawl

./: .gitignore  CMakeLists.txt  README.md  READ_ME.md  oldtask.json
incl/: constants.h  libraries.h
source/: game.cpp  game.h  main.cpp
source/cards/: card.cpp  card.h  deck.cpp  deck.h  deck_combat.cpp  id_to_card.cpp  id_to_card.h
source/character/: character.cpp  character.h  conditions.h  relic_inv.cpp  relics.cpp  relics.h  relics_inventory.cpp  statuses.cpp
source/draw/: img_renderer.cpp  renderer.cpp  text.cpp  text.h  window.cpp
source/enemies/: action_generation.cpp  action_generation.h  enemy.cpp  enemy.h  enemy_actions.cpp  id_to_enemy.cpp  id_to_enemy.h  intent.cpp  intent.h
source/gui/: gui.cpp  gui.h  top_panel.cpp  top_panel.h
source/gui/fx/: fx.cpp  fx.h
source/gui/input/: cursor_variables.cpp  cursor_variables.h  input_manager.cpp
source/input/: cursor_variables.cpp  cursor_variables.h  input_manager.cpp  mouse_input.cpp  mouse_input.h
source/pools/: pools.cpp  pools.h
source/state/: battle.cpp  battle.h  battle_buttons.cpp  battle_buttons.h  battle_ui.cpp  battle_ui.h
source/states/combat/: combat.cpp  combat.h  combat_rewards.cpp  combat_rewards.h  combat_ui.cpp  combat_ui.h  rewards.cpp  rewards.h
source/states/event/: event.cpp  event.h  id_to_event.cpp  id_to_event.h
source/states/map/: map.cpp  map.h  map_elements.cpp  map_elements.h  nodes.cpp  tree.cpp
source/states/rest/: rest.cpp  rest.h
source/states/shop/: shop.cpp  shop.h  shop_generation.cpp
source/states/start_menu/: start_menu.cpp  start_menu.h
(+2 files in other folders)
